--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,6 +11,7 @@
 
     
     <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fonts.css') }}">
     {% block css %}
     {% endblock %}
 </head>
