--- a/app/templates/home_admin.html
+++ b/app/templates/home_admin.html
@@ -6,18 +6,43 @@
 {% endblock %}
 
 {% block content %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+    <div class="alert alert-info">{{ messages[0] }}</div>
+{% endif %}
+{% endwith %}
 <div class="container">
-    <h1>Bienvenido!</h1>
-    <a href="/logout" class="btn btn-outline-primary" style="float:right">Logout</a>
-    <a href="{{ url_for('main.agregar_lente') }}" class="btn btn-primary" style="float:right">Agregar</a>
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        <div class="alert alert-info">{{ messages[0] }}</div>
-      {% endif %}
-    {% endwith %}
+      <!-- Sidebar -->
+    <div class="barra_lateral">
+        <h1 class="bienvenido">Bienvenido!</h1>
+        <a href="/logout" class="btn btn-outline-primary" style="float:right">Logout</a>
+        <a href="{{ url_for('main.agregar_lente') }}" class="btn btn-primary" style="float:right">Agregar</a>
+    </div>
 
-    <h3>Modelos de lentes</h3>
-    <table class="table">
+
+     <!-- Main content -->
+    <div class="sector_modelos">
+        <h3>Modelos de lentes</h3>
+        <div class="container_modelos">
+            {% for lente in models%}
+            <div class="item_cuadricula">
+                <div class="info_lente_cuadricula">
+                    <p class="nombre_cuadricula">{{lente.name}}</p>
+                    <button class="btn btn-sm btn-outline-info toggle-visible" data-id="{{ lente.model_id }}" title="Visibilidad">
+                            {% if lente.visible %}
+                                <i class="fas fa-eye"></i>
+                            {% else %}
+                                <i class="fas fa-eye-slash"></i>
+                            {% endif %}
+                    </button>
+                </div>
+                <img class="img_cuadricula" src="{{lente.path_to_img_front}}">
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <!-- <table class="table">
         <thead>
             <tr>
                 <th></th>
@@ -50,7 +75,7 @@
             </tr>
             {% endfor %}
         </tbody>
-    </table>
+    </table> -->
 
 </div>
 
