--- a/app/templates/lente_detalle.html
+++ b/app/templates/lente_detalle.html
@@ -1,6 +1,55 @@
 {% extends 'layout.html' %}
+{% block css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/editar_producto.css') }}">
+{% endblock %}
 
 {% block content %}
+<div class="container_general">
+  <div class="container_dentro">
+    <div class="barra_superior">
+      <h3>Editar producto</h3>
+      <a href="{{ url_for('main.home_admin') }}" class="btn btn-secondary">X</a>
+    </div>
+    <div class="contenido">
+      <div class="contenido_izquierda">
+        <h4>Imagen</h4>
+        <div class="imagen_costado">
+          {% if ar_model.path_to_img_front %}
+              <img src="/{{ ar_model.path_to_img_front }}" alt="Frente" class="img-fluid">
+            {% else %}
+              <span class="text-muted">Sin archivo</span>
+            {% endif %}
+        </div>
+        <div class="botones_izquierda">
+          <button class="boton_izq">Añadir</button>
+          <button class="boton_izq">Cambiar</button>
+          <button class="boton_izq">Crear/editar modelo</button>
+          <button class="boton_izq">Eliminar</button>
+        </div>
+
+      </div>
+      <div class="contenido_derecha">
+        <div class="form-check mb-3">
+          <input class="form-check-input" type="checkbox" name="visible" id="visibleCheck"
+                {% if ar_model.visible %}checked{% endif %}>
+          <label class="form-check-label" for="visibleCheck">Visible</label>
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Nombre</label>
+          <input type="text" name="name" class="form-control" value="{{ ar_model.name or '' }}">
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Descripción</label>
+          <input type="text" name="description" class="form-control" value="{{ ar_model.description or '' }}">
+        </div>
+        <button type="submit" class="btn btn-primary">Guardar cambios</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!--
 <div class="container my-4">
   <div class="d-flex justify-content-between align-items-center">
     <h2>Editar Modelo AR #{{ ar_model.model_id }}</h2>
@@ -17,8 +66,9 @@
 
   <form method="POST" enctype="multipart/form-data"
         action="{{ url_for('main.editar_lente', lente_id=ar_model.model_id) }}">
-
+-->
     <!-- Visible + Nombre + Descripción -->
+    <!--
     <div class="form-check mb-3">
       <input class="form-check-input" type="checkbox" name="visible" id="visibleCheck"
              {% if ar_model.visible %}checked{% endif %}>
@@ -34,12 +84,14 @@
       <label class="form-label">Descripción</label>
       <input type="text" name="description" class="form-control" value="{{ ar_model.description or '' }}">
     </div>
-
+-->
     <!-- Imágenes originales -->
+<!--   
     <div class="row">
       <h4>Imágenes originales</h4>
-
+-->
       <!-- IMG: Frente -->
+<!-- 
       <div class="col">
         <div class="card mb-3">
           <div class="card-header">Imagen frente (original)</div>
@@ -55,8 +107,9 @@
           </div>
         </div>
       </div>
-
+-->
       <!-- IMG: Perfil -->
+<!--
       <div class="col">
         <div class="card mb-3">
           <div class="card-header">Imagen perfil (original)</div>
@@ -72,8 +125,9 @@
           </div>
         </div>
       </div>
-
+-->
       <!-- IMG: Fondo -->
+<!--
       <div class="col">
         <div class="card mb-3">
           <div class="card-header">Imagen fondo (original)</div>
@@ -90,12 +144,14 @@
         </div>
       </div>
     </div>
-
+-->
     <!-- Imágenes aplanadas -->
+<!--
     <div class="row">
       <h4>Imágenes aplanadas</h4>
-
+-->
       <!-- IMG: Frente aplanada -->
+<!--
       <div class="col">
         <div class="card mb-3">
           <div class="card-header">Imagen frente (aplanada)</div>
@@ -112,8 +168,9 @@
           </div>
         </div>
       </div>
-
+    -->
       <!-- IMG: Perfil aplanada -->
+<!--
       <div class="col">
         <div class="card mb-3">
           <div class="card-header">Imagen perfil (aplanada)</div>
@@ -129,8 +186,9 @@
           </div>
         </div>
       </div>
-
+    -->
       <!-- IMG: Patilla aplanada -->
+<!--
       <div class="col">
         <div class="card mb-3">
           <div class="card-header">Imagen patilla (aplanada)</div>
@@ -146,8 +204,9 @@
           </div>
         </div>
       </div>
-
+    -->
       <!-- IMG: Fondo aplanado -->
+<!--
       <div class="col">
         <div class="card mb-3">
           <div class="card-header">Imagen fondo (aplanado)</div>
@@ -168,8 +227,9 @@
         <a href="{{ url_for('main.aplanar_imagenes',model_id=ar_model.model_id) }}" target="_blank" class="btn btn-info text-light btn-block">Helper para generarlas</a>
       </div>
     </div>
-
+  -->
     <!-- SVGs: tres en la misma fila -->
+<!--
     <div class="row">
       <h4>SVGs</h4>
 
@@ -241,8 +301,9 @@
       </div>
     </div>
 
-
+  -->
     <!-- Modelo 3D -->
+<!--
     <div class="row">
       <h4>Modelo 3D</h4>
       <div class="col">
@@ -253,8 +314,9 @@
               <div class="mb-3">
                 <code class="d-block text-truncate">{{ ar_model.path_to_glb }}</code>
               </div>
-
+            -->
               <!-- Preview GLB (chico, responsivo) -->
+<!--              
               <div div class="border rounded bg-light" style="height:400px; overflow:hidden;">
                 <model-viewer
                   src="{{ url_for('main.uploads',
@@ -297,8 +359,9 @@
       </div>
 
     </div>
-
+  -->
     <!-- JSONs -->
+ <!--
     <h4>JSONs</h4>
     <div class="row">
       <div class="col-md-6 mb-3">
@@ -337,7 +400,7 @@
     </div>
   </form>
 </div>
-
+-->
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 
